// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
/*
protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    api/ipam.proto
*/
syntax = "proto3";

option go_package = "github.com/arzzon/ipam-as";

package ipamas;

service IPManagement {
  rpc AllocateIP (AllocateIPRequest) returns (AllocateIPResponse) {}
  rpc ReleaseIP (ReleaseIPRequest) returns (ReleaseIPResponse) {}
}


message AllocateIPRequest {
  string Label = 1;
  string Hostname = 2;
}

message ReleaseIPRequest {
  string ip = 1;
}

message AllocateIPResponse {
  string ip = 1;
  string error = 2;
}

message ReleaseIPResponse {
  string error = 1;
}